<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_view"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profileContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivUserImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="16dp"
                android:background="@drawable/circle_circle"
                android:src="@drawable/ic_account_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/medium_margin"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivUserImage"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:lines="1"
                    android:textSize="18sp"
                    tools:text="@string/name" />

                <TextView
                    android:id="@+id/tvUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_marginTop="3dp"
                    android:lines="1"
                    tools:text="@string/email" />

                <TextView
                    android:id="@+id/tvUserStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_marginTop="3dp"
                    android:lines="1"
                    tools:text="Status" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileContainer" />


        <RelativeLayout
            android:id="@+id/btnChats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp">


            <ImageView
                android:id="@+id/imgvChats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/profile"
                android:src="@drawable/baseline_chat_black_36"
                android:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/btnChatsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@+id/imgvChats"
                android:gravity="start|center_vertical"
                android:text="@string/chats"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btnChats_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-10dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/imgvChats"
                android:background="@drawable/circle_notification"
                android:gravity="center"
                android:padding="2dp"
                android:text="TextView"
                android:visibility="gone"
                android:textColor="@color/white"
                tools:visibility="visible"
                tools:text="9+" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/llFriendsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgvFriendsList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profile"
                    android:src="@drawable/baseline_group_black_36"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/btnFriendsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/friends"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"

            android:focusable="true"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/layoutNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgvNotivication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profile"
                    android:src="@drawable/ic_notifications_black_36dp"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/btnNotificationText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/notification"
                    android:textSize="16sp" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/NotificationContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutNotification"
                android:visibility="gone" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/llSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgvSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profile"
                    android:src="@drawable/ic_settings_black_36dp"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/btnSettingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/setting"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/llloginout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgvloginout"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_margin5"
                android:contentDescription="@string/logout"
                android:src="@drawable/loginout"
                android:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/txtvloginout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin5"
                android:gravity="start|center_vertical"
                android:text="@string/logout"
                android:textSize="16sp" />

        </LinearLayout>
    </RelativeLayout>

</com.google.android.material.navigation.NavigationView>